--- a/src/app.scss
+++ b/src/app.scss
@@ -37,10 +37,12 @@ body {
 	/* TODO properly name these */
 	--main-font: 'Manrope', sans-serif;
 	--mono-font: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace;
-	--white: hsl(206, 100%, 94%);
-	--accent-color: hsl(206, 100%, 81%);
-	--accent-color-two: hsl(208, 75%, 82%);
-	--accent-low-opacity: hsla(205, 91%, 69%, 0.15);
+	--white: hsl(211, 100%, 94%);
+	--accent-color: hsl(211, 84%, 69%);
+	--accent-color-two: hsl(237, 58%, 69%);
+	--accent-color-three: hsl(333, 84%, 69%);
+	--accent-low-opacity: hsla(211, 58%, 69%, 0.15);
+	// --accent-gradient-
 	--bg-color: hsl(252, 10%, 11%);
 	--grey-one: hsl(210, 14%, 17%);
 	--grey-two: hsl(212, 19%, 19%);
